--- a/styles.css
+++ b/styles.css
@@ -56,11 +56,14 @@ box-shadow: 1px 0px 6px 5px rgba(87,84,87,0.63);
 }
 
 
-#top-img{
+#imgtop{
   width:100%;
    height:50%;
 }
-#imgtop, #imgbottom{
-  width: 100%;
-  height:100%;
+
+
+#text-container{
+  width: 70%;
+padding-left:5%;
 }
+
